--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-container clearfix">
 
       <div class="tab-item " ng-repeat="item in tc.bookmarks track by item.id">
-        <a ng-click="tc.goto(item.url)" ng-right-click="tc.openContextMenu($event,item)" source="item">
+        <a ng-click="tc.goto(item)" ng-right-click="tc.openContextMenu($event,item)" source="item">
           <div class="thumb">
             <img ng-src="{{item.image}}" ng-if="item.image"></img>
             <div class="refresh" ng-click="tc.removeImage($event, item)">X</div>          
@@ -42,7 +42,10 @@
       </div>
     </div>
     <div bookmark-add-panel is-open="tc.panelOpen" add-bookmark="tc.addBookmark(url)"></div>
-    <div context-menu show-menu="tc.showMenu" click-out-handler="tc.hideMenu()" position="tc.clickPosition"></div>
+    <div  context-menu show-menu="tc.showMenu"
+          position="tc.clickPosition"
+          click-out-handler="tc.hideMenu()"
+          command-handler="tc.runCommand(command)"></div>
   </div>
 
   <script src="vendor/angular.min.js"></script>
@@ -51,6 +54,7 @@
   <script src="scripts/template/ngRightClick.js"></script>
   <script src="scripts/template/clickOut.js"></script>
   <script src="scripts/template/contextMenu.js"></script>
+  <script src="scripts/service/MenuCommandFactory.js"></script>
 </body>
 
 </html>
